xx.xx.2006 [REV ]
    gui.pstalker:
        - Added timestamp column.
        - Made columns sortable.


09.13.2006 [REV 122]
    docs:
        - Fixed bug in PyDbg snippet example.
        - Added basic documentation for public-release FileFuzz GUI module.
    pida:
        - Fixed bugs in rendering of GML graphs.
    gui.filefuzz:
        - Added multi-byte modifications feature.
        - Fixed bug in statistic tracking.
    heap_trace:
        - Added tool for heap alloc/free tracking, useful for finding heap spray / memory leak vectors.
    pida:
        - wx is not longer a mandatory requirement for using the PIDA module.
    gui.pstalker:
        - Implemented CLI option to "watch for" and attach to a target process.
    pydbg:
        - Fixed handle leaks in load() routine.
        - Fixed handle leaks in pydbg_core.
        - Implemented hide_debugger() routine to hide from IsDebuggerPresent().
        - Replaced various instances of DBG_CONTINUE with the more approriate DBG_EXCEPTION_NOT_HANDLED, this fix allows
          for improved handling of debugging files with anti-debugging functionality.
        - Fixed bug where breakpoints deleted from their own handler were still being restored.
        - Added page_guard_clear() and page_guard_restore() functionality. This is useful for suspending memory
          breakpoints to single step past a REP instruction.
        - Added optional string 'prefix' argument to hex_dump() for customizing generated dumps.
        - Removed assumption from func_resolve_debuggee() that all DLLs end in ".dll" (ie: QuickTime: .qts/.qtx)
        - Replaced usage of '\\' with os.sep in system_dll.py.
        - Bug fixes in cleanup() routines.
    utils:
        - MySQLdb is not longer a mandatory requirement for using the utils module.


07.27.2006 [REV 97]
    dpc:
        - Disabled debug logging by defalt.
    pydbg:
        - Added get_instruction() libdasm wrapper.